# my_skill

./: .gitignore  README.md
docs/chats/: 2026-07-01-ssh-linux-diagnose-conversation.md
docs/plans/: 2026-07-01-ssh-linux-diagnose-design.md  2026-07-01-ssh-linux-diagnose.md  2026-07-10-server-security-assessor-design.md  2026-07-10-server-security-assessor-implementation.md
network-security-integrated-scanner/: SKILL.md
network-security-integrated-scanner/agents/: openai.yaml
network-security-integrated-scanner/assets/: executive-report-template.html
network-security-integrated-scanner/references/: forensics.md  linux-internal-assessment.md  report-validation.md  tool-installation.md
network-security-integrated-scanner/references/baselines/: default-baseline.md
network-security-integrated-scanner/scripts/security_assessor/: __init__.py  (+5 more)
network-security-integrated-scanner/tests/: test_command_plan.py  test_parsers.py  test_scope.py  test_skill_contract.py
server-security-assessor/: SKILL.md  pyproject.toml
server-security-assessor/references/: external-assessment.md  forensics.md  report-schema.md  scope-policy.md
server-security-assessor/scripts/security_assessor/: models.py  scope.py
server-security-assessor/scripts/server_security_assessor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server-security-assessor/tests/: test_command_plan.py  test_preflight.py  test_skill_contract.py
skills/network-secure/: SKILL.md
skills/network-security-integrated-scanner/: SKILL.md  pyproject.toml
skills/ssh-linux-diagnose/: SKILL.md
(+41 files in other folders)
